--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         .section-title::before { content: ''; width: 4px; height: 20px; background: #003366; border-radius: 2px; }
         .form-group { margin-bottom: 20px; }
         .form-row-3 { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; }
+        .form-row-2 { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
         label { display: block; margin-bottom: 8px; font-weight: 500; color: #4a5568; font-size: 14px; }
         input, select, textarea { width: 100%; padding: 12px 16px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 16px; transition: all 0.3s ease; background: white; }
         input:focus, select:focus, textarea:focus { outline: none; border-color: #003366; box-shadow: 0 0 0 3px rgba(0, 51, 102, 0.1); transform: translateY(-1px); }
+        textarea { resize: vertical; }
         .items-section { background: #f8fafc; border-radius: 12px; padding: 25px; margin-bottom: 30px; }
         .items-table { width: 100%; border-collapse: collapse; margin-bottom: 20px; background: white; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.04); }
         .items-table th { background: #003366; color: white; padding: 15px 10px; text-align: left; font-weight: 500; font-size: 14px; }
@@ -51,7 +53,7 @@
             .form-content { padding: 20px; }
             .header { padding: 20px; }
             .header h1 { font-size: 24px; }
-            .form-row, .form-row-3, .form-row-4 { grid-template-columns: 1fr; }
+            .form-row, .form-row-3, .form-row-4, .form-row-2 { grid-template-columns: 1fr; flex-direction: column; }
             .items-table { font-size: 14px; }
             .items-table th, .items-table td { padding: 10px 6px; }
             .modal-content { width: 95%; padding: 20px; }
@@ -157,11 +159,11 @@
                         <p>Nenhum item adicionado</p>
                     </div>
                 </div>
-                <!-- Informações de Entrega -->
+                <!-- Informações de Entrega e Pagamento -->
                 <div class="section">
                     <h2 class="section-title">Informações de Entrega e Pagamento</h2>
                     <div class="form-group">
-                        <div class="form-row">
+                        <div class="form-row-2">
                             <div>
                                 <label for="dataEmissao">Data de Emissão:</label>
                                 <input type="text" id="dataEmissao" readonly style="background: #f8fafc;" required>
