--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         .section-title { font-size: 20px; font-weight: 600; color: #2d3748; margin-bottom: 20px; display: flex; align-items: center; gap: 10px; }
         .section-title::before { content: ''; width: 4px; height: 20px; background: #003366; border-radius: 2px; }
         .form-group { margin-bottom: 20px; }
-        .form-row-3 { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; }
         .form-row-2 { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
+        .form-row-3 { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; }
         label { display: block; margin-bottom: 8px; font-weight: 500; color: #4a5568; font-size: 14px; }
         input, select, textarea { width: 100%; padding: 12px 16px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 16px; transition: all 0.3s ease; background: white; }
         input:focus, select:focus, textarea:focus { outline: none; border-color: #003366; box-shadow: 0 0 0 3px rgba(0, 51, 102, 0.1); transform: translateY(-1px); }
@@ -53,7 +53,7 @@
             .form-content { padding: 20px; }
             .header { padding: 20px; }
             .header h1 { font-size: 24px; }
-            .form-row, .form-row-3, .form-row-4, .form-row-2 { grid-template-columns: 1fr; flex-direction: column; }
+            .form-row-2, .form-row-3 { grid-template-columns: 1fr; }
             .items-table { font-size: 14px; }
             .items-table th, .items-table td { padding: 10px 6px; }
             .modal-content { width: 95%; padding: 20px; }
@@ -197,7 +197,7 @@
         </div>
     </div>
 
-    <!-- Modal para Adicionar Item -->
+    <!-- Modal para Adicionar Item ao Pedido -->
     <div id="itemModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -205,7 +205,7 @@
                 <button type="button" class="close-btn" onclick="closeItemModal()">&times;</button>
             </div>
             <div class="form-group">
-                <div class="form-row">
+                <div class="form-row-2">
                     <div>
                         <label for="itemQtd">Quantidade:</label>
                         <input type="number" id="itemQtd" min="1" placeholder="Ex: 30" required>
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <div class="form-row">
+                <div class="form-row-2">
                     <div>
                         <label for="itemProduto">Produto:</label>
                         <select id="itemProduto" required>
@@ -240,7 +240,7 @@
                             <option value="Ribbon Cera Padrão">Ribbon Cera Padrão</option>
                             <option value="Ribbon Cera Top">Ribbon Cera Top</option>
                             <option value="Ribbon Mista">Ribbon Mista</option>
-                            <option value="Ribbon resina">Ribbon Resina</option>
+                            <option value="Ribbon Resina">Ribbon Resina</option>
                             <option value="Rótulos">Rótulos</option>
                         </select>
                     </div>
@@ -251,34 +251,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <div class="form-row">
-                    <div>
-                        <label for="itemTipoPapel">Tipo de Papel:</label>
-                        <select id="itemTipoPapel">
-                            <option value="">Selecione</option>
-                            <option value="Térmico Branco 44g">Térmico Branco 44g</option>
-                            <option value="Termoticket">Termoticket</option>
-                            <option value="Térmico Padrão">Térmico Padrão</option>
-                            <option value="Térmico top">Térmico top</option>
-                            <option value="Cartão">Cartão</option>
-                            <option value="Couchê Padrão">Couchê Padrão</option>
-                            <option value="Branco Fosco">Branco Fosco</option>
-                            <option value="Bopp Branco Fosco">Bopp Branco Fosco</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="itemTipoCola">Tipo de Cola:</label>
-                        <select id="itemTipoCola">
-                            <option value="">Selecione</option>
-                            <option value="N/A">N/A</option>
-                            <option value="Cola Acrílica">Cola Acrílica</option>
-                            <option value="Cola Borracha">Cola Borracha</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="form-row">
+                <div class="form-row-2">
                     <div>
                         <label for="itemImpressao">Impressão:</label>
                         <select id="itemImpressao" required>
@@ -292,10 +265,6 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group" id="itemDetalhesGroup" style="display: none;">
-                <label for="itemDetalhes">Detalhes:</label>
-                <input type="text" id="itemDetalhes" placeholder="Detalhes">
-            </div>
             <div class="form-group">
                 <label for="itemValorUnitario">Valor Unitário do Rolo (R$):</label>
                 <input type="text" id="itemValorUnitario" placeholder="R$ 0,00" autocomplete="off" required>
@@ -303,20 +272,6 @@
             <div class="modal-actions">
                 <button type="button" class="btn btn-secondary" onclick="closeItemModal()">Cancelar</button>
                 <button type="button" class="btn" onclick="addItem()">Adicionar Item</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal para Resumo de Item -->
-    <div id="itemSummaryModal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3>Resumo do Item</h3>
-                <button type="button" class="close-btn" onclick="closeItemSummaryModal()">&times;</button>
-            </div>
-            <div id="itemSummaryContent"></div>
-            <div class="modal-actions">
-                <button type="button" class="btn btn-secondary" onclick="closeItemSummaryModal()">Fechar</button>
             </div>
         </div>
     </div>
